<resources>
    <string name="app_name">Хранители истории</string>
    <string name="help_button">help button</string>
    <string name="blue_button">blue button</string>
    <string name="red_button">red button</string>
    <string name="green_button">green button</string>
    <string name="purple_button">purple button</string>
    <string name="yellow_button">yellow button</string>
    <string name="pink_button">pink button</string>
    <string name="white_button">white button</string>
    <string name="brown_button">brown button</string>
    <string name="ykt_100_years">100 years yakutian</string>
    <string name="game_rules_title">Правила игры</string>
    <string name="ic1">"Институт мерзлотоведения в г. Якутск носит имя Павла Ивановича Мельникова, советского ученого-геолога, Героя Социалистического труда, заслуженного деятеля науки и техники РСФСР. Институт организован в 1960 году. Основными направлениями научной деятельности является исследование эволюции криолитозоны под влиянием природных и антропогенных факторов. При институте находится подземная лаборатория, криохранилище, музей. На территории института расположено Федеральное криохранилище семян растений - российский аналог Всемирного семенохранилища на Шпицбергене; хранилище было открыто 12 декабря 2012 г."</string>
    <string name="game_area">Поле игры</string>
    <string name="show_answer">Показать ответ</string>
    <string name="right">Правильно</string>
    <string name="wrong">Неправильно</string>
    <string name="close_dialog">Закрыть</string>
    <string name="information_card_back">Information card back</string>
    <string name="icard">Информационная карточка</string>
    <string name="button_back">Кнопка назад</string>
    <string name="example_source">Источник: <u>https://www.100yakutia.ru/istoriya-yakutii/47-istoriya-yakutii</u></string>
    <string name="open_sing">Открыть песню</string>
    <string name="open_verse">Открыть стих</string>
    <string name="sing">Гимн РС(Я)</string>

    <string name="game_rules1">Дорогой друг!\nПеред тобой настольная игра, благодаря которой ты сможешь узнать много нового и интересного из истории становления государственности Якутии. Пройдя путь от старта до финиша вместе с нашими персонажами, правильно выполнив все задания, ты смело можешь считать себя одним из хранителей истории.\nПравила игры: Игроки выбирают себе персонажа и начинают состязание с первой ячейки. Очередность определяется методом жеребьевки. Игроки кидают кубик и передвигают свои фигурки на столько ходов, сколько выпало на кубике. Нажимая на нужный цвет ячейки в приложении-компаньоне, игроки определяют, какое задание нужно выполнить. За правильный ответ или выполненное задание игрок получает жетон.</string>
    <string name="game_rules2">Игра заканчивается тогда, когда один из игроков первым доберется до ячейки 100. Этот игрок получает последний жетон. Тот, у кого окажется больше жетонов, становится победителем игры и получает звание «Хранитель истории».</string>

    <string name="gimn_sakha">Сахам сирэ дьоллоох тускуга\nСаһарҕалыы ыҥыра ыллыыр.\nИлинтэн арҕаа ол кустуга\nАлмаас таас курдук сандаара сырдыыр.\n\nПрипев:\nБарҕа быйаҥнаах Сахам дойдута\nМодун Арассыыйа киэн туттуута,\nӨркөн өрөгөй тойугун туойдун,\nҮүнэр үйэҕэ үрдүү туруохтун!\n\nҮллэр үөстээх Өлүөнэ Эбэ\nӨлбөт мэҥэ угуттуур уулаах.\nЭлбэх омукка эрчим эбэр,\nИли-эйэни олохтуур уохтаах.\n\nПрипев.\n\nАаспыт кэммит айхаллаах суола\nАрчылыыр аар алгыһын биэрдэ.\nСахабыт сирэ дьоһун, дуолан\nСайдыы аартыгар түөрэҕэ түстэ.\n\nПрипев.</string>
    <string name="player_time_zero">00:00</string>
    <string name="bergen">Бэргэн</string>
    <string name="aita">Айта</string>
    <string name="michiye">Мичийэ</string>
    <string name="erchim">Эрчим</string>
    <string name="verse_title">Стихотворение</string>
    <string name="verse">Төрөөбүт тыл. Семен Данилов\n\nЧыычаахха – чыычаах чуопчаарар тыла,\nСүүрүккэ – сүүрүк сипсийэр тыла,\nЭтиҥҥэ – этиҥ эрчимнээх тыла –\nИлгэлээх истиҥ ийэ тыл буолар.\n\nОттон бу миэхэ ийэм биэрбит тыла,\nОлоҕум тыла,\nТапталым тыла –\nМин төрүт тылым, мин ийэ тылым\nСаргылаах сахам\nСаҥата буолар.\n\n&#8230;\n\nРодной язык\n\nУ птиц свой птичий язык\nРучей журчит журчанием\nГроза гремит громом\nНо самый родной язык - материнский…\n\nА у меня свой язык, которому научила меня моя мать\nЭто язык жизни\nЯзык любви\nМой родной материнский язык\nЯзык наших предков\nЯзык Саха...\n</string>
</resources>